--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -15,19 +15,13 @@
 </head>
 <body>
     <header class="header">
-        <h1 class="header__logo">ohmyfood</h1>
-        <i class="header__location fa-solid fa-location-dot">Paris, Belleville</i>
+        <div class="header__logo">
+            <a href="../index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
+            <h1>ohmyfood</h1>
+        </div>
     </header>
     <main class="main-wrapper">
-        <section class="reservation">
 
-        </section>
-        <section class="fonctionnement">
-
-        </section>
-        <section class="restaurants">
-
-        </section>
     </main>
 </body>
 </html>
