--- a/index.html
+++ b/index.html
@@ -5,12 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oh My Food</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
@@ -20,14 +16,67 @@
     </header>
     <main class="main-wrapper">
         <section class="reservation">
-
+            <h2>Réservez le menu qui vous convient</h2>
+            <p>Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
+            <button>Explorer nos restaurants</button>
         </section>
         <section class="fonctionnement">
-
+            <h2>Fonctionnement</h2>
+            <div>
+                <div>1</div>
+                <i class="fa-solid fa-mobile-screen-button fa-xs"></i>
+                <p>Choisissez un restaurant</p>
+            </div>
+            <div>
+                <div>2</div>
+                <i class="fa-sharp fa-solid fa-list-ul fa-xs"></i>
+                <p>Composez votre menu</p>
+            </div>
+            <div>
+                <div>3</div>
+                <i class="fa-sharp fa-solid fa-store fa-xs"></i>
+                <i class="fa-light fa-heart"></i>               
+                <p>Dégustez au restaurant</p>
+            </div>
         </section>
         <section class="restaurants">
-
+            <h2>Restaurants</h2>
+            <a href="/restaurants/menu1.html">
+                <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="served salmon with roquette on a dish">
+                <span class="nouveau">Nouveau</span>
+                <h3>La palette du goût</h3>
+                <p>Ménilmontant</p>
+                <i class="fa-regular fa-heart"></i>
+            </a>
+            <a href="/restaurants/menu2.html">
+                <img src="/assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="served salmon with roquette on a dish">
+                <span class="nouveau">Nouveau</span>
+                <h3>La note enchantée</h3>
+                <p>Charonne</p>
+                <i class="fa-regular fa-heart"></i>
+            </a>
+            <a href="/restaurants/menu3.html">
+                <img src="/assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="served salmon with roquette on a dish">
+                <h3>À la française</h3>
+                <p>Cité Rouge</p>
+                <i class="fa-regular fa-heart"></i>
+            </a>
+            <a href="/restaurants/menu4.html">
+                <img src="/assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="served salmon with roquette on a dish">
+                <h3>Le délice des sens</h3>
+                <p>Folie-Méricourt</p>
+                <i class="fa-regular fa-heart"></i>
+            </a>
         </section>
     </main>
+    <footer>
+        <h4>ohmyfood</h4>
+        <ul>
+            <li class="list-group-item"><i class="fa-solid fa-utensils fa-fw" aria-hidden="true"></i>&nbsp; Proposer un restaurant</li>
+            <li class="list-group-item"><i class="fa-solid fa-handshake-angle fa-fw" aria-hidden="true"></i>&nbsp; Devenir partenaire</li>
+            <li class="list-group-item">Mentions légales</li>
+            <li class="list-group-item">Contact</li>
+        </ul>
+    </footer>
 </body>
 </html>
