termine header mobile

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <header class="header">
         <h1 class="header__logo">ohmyfood</h1>
-        <i class="header__location fa-solid fa-location-dot">Paris, Belleville</i>
+        <div class="header__location">
+            <p><i class="fa-solid fa-location-dot fa-fw" aria-hidden="true"></i>&nbsp; Paris, Belleville</p>
+        </div>
     </header>
     <main class="main-wrapper">
         <section class="reservation">
