--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     </header>
     <main class="main-wrapper">
         <section class="reservation">
-            <h2>Réservez le menu qui vous convient</h2>
-            <p>Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-            <button>Explorer nos restaurants</button>
+            <h2 class="reservation__title">Réservez le menu qui vous convient</h2>
+            <p class="reservation__subtitle">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
+            <button class="reservation__btn">Explorer nos restaurants</button>
         </section>
         <section class="fonctionnement">
-            <h2>Fonctionnement</h2>
+            <h2 class="titre__section">Fonctionnement</h2>
             <div>
                 <div>1</div>
                 <i class="fa-solid fa-mobile-screen-button fa-xs"></i>
@@ -41,7 +41,7 @@
             </div>
         </section>
         <section class="restaurants">
-            <h2>Restaurants</h2>
+            <h2 class="titre">Restaurants</h2>
             <a href="/restaurants/menu1.html">
                 <img src="/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="served salmon with roquette on a dish">
                 <span class="nouveau">Nouveau</span>
