changement des boutons functionnement

--- a/index.html
+++ b/index.html
@@ -23,21 +23,27 @@
             <button class="reservation__btn">Explorer nos restaurants</button>
         </section>
         <section class="fonctionnement">
-            <h2 class="titre__section">Fonctionnement</h2>
-            <div>
-                <div>1</div>
-                <i class="fa-solid fa-mobile-screen-button fa-xs"></i>
-                <p>Choisissez un restaurant</p>
+            <h2 class="fonctionnement__title">Fonctionnement</h2>
+            <div class="fonctionnement__wrapper">
+                <p class="fonctionnement__wrapper--text">Choisissez un restaurant</p>
+                <div class="fonctionnement__btn">
+                    <div class="fonctionnement__btn--numberBox"><span class="fonctionnement__btn--number">1</span></div>
+                    <i class="fonctionnement__btn--logo fa-solid fa-mobile-screen-button fa-lg"></i>
+                </div>
             </div>
-            <div>
-                <div>2</div>
-                <i class="fa-sharp fa-solid fa-list-ul fa-xs"></i>
-                <p>Composez votre menu</p>
+            <div class="fonctionnement__wrapper">
+                <p class="fonctionnement__wrapper--text">Composez votre menu</p>
+                <div class="fonctionnement__btn">
+                    <div class="fonctionnement__btn--numberBox"><span class="fonctionnement__btn--number">2</span></div>
+                    <i class="fonctionnement__btn--logo fa-sharp fa-solid fa-list-ul fa-lg"></i>
+                </div>
             </div>
-            <div>
-                <div>3</div>
-                <i class="fa-sharp fa-solid fa-store fa-xs"></i>             
-                <p>Dégustez au restaurant</p>
+            <div class="fonctionnement__wrapper">
+                <p class="fonctionnement__wrapper--text">Dégustez au restaurant</p>
+                <div class="fonctionnement__btn">
+                    <div class="fonctionnement__btn--numberBox"><span class="fonctionnement__btn--number">3</span></div>
+                    <i class="fonctionnement__btn--logo fa-sharp fa-solid fa-store fa-lg"></i>
+                </div>
             </div>
         </section>
         <section class="restaurants">
