--- a/index.html
+++ b/index.html
@@ -23,26 +23,28 @@
             <button class="reservation__btn">Explorer nos restaurants</button>
         </section>
         <section class="fonctionnement">
-            <h2 class="fonctionnement__title">Fonctionnement</h2>
+            <h2 class="fonctionnement__title">Fonctionnement</h2>        
             <div class="fonctionnement__wrapper">
+                <div class="fonctionnement__wrapper--numberBox">
+                    <span class="fonctionnement__wrapper--number">1</span>
+                </div>
                 <p class="fonctionnement__wrapper--text">Choisissez un restaurant</p>
-                <div class="fonctionnement__btn">
-                    <div class="fonctionnement__btn--numberBox"><span class="fonctionnement__btn--number">1</span></div>
-                    <i class="fonctionnement__btn--logo fa-solid fa-mobile-screen-button fa-lg"></i>
+                <div class="fonctionnement__wrapper--btn">
+                    <i class="fonctionnement__wrapper--btn-logo fa-solid fa-mobile-screen-button fa-lg"></i>
                 </div>
             </div>
             <div class="fonctionnement__wrapper">
+                <div class="fonctionnement__wrapper--numberBox"><span class="fonctionnement__wrapper--number">2</span></div>
                 <p class="fonctionnement__wrapper--text">Composez votre menu</p>
-                <div class="fonctionnement__btn">
-                    <div class="fonctionnement__btn--numberBox"><span class="fonctionnement__btn--number">2</span></div>
-                    <i class="fonctionnement__btn--logo fa-sharp fa-solid fa-list-ul fa-lg"></i>
+                <div class="fonctionnement__wrapper--btn">
+                    <i class="fonctionnement__wrapper--btn-logo fa-sharp fa-solid fa-list-ul fa-lg"></i>
                 </div>
             </div>
             <div class="fonctionnement__wrapper">
+                <div class="fonctionnement__wrapper--numberBox"><span class="fonctionnement__wrapper--number">3</span></div>
                 <p class="fonctionnement__wrapper--text">Dégustez au restaurant</p>
-                <div class="fonctionnement__btn">
-                    <div class="fonctionnement__btn--numberBox"><span class="fonctionnement__btn--number">3</span></div>
-                    <i class="fonctionnement__btn--logo fa-sharp fa-solid fa-store fa-lg"></i>
+                <div class="fonctionnement__wrapper--btn">
+                    <i class="fonctionnement__wrapper--btn-logo fa-sharp fa-solid fa-store fa-lg"></i>
                 </div>
             </div>
         </section>
