--- a/index.html
+++ b/index.html
@@ -26,75 +26,61 @@
             <div class="fonctionnement__wrap">
                 <h2 class="fonctionnement__wrap--title">Fonctionnement</h2>
                 <div class="btn__box">
-                
-                    <div class="btn">
-                        <div class="btn__numberBox">
-                            <span class="btn__numberBox--number">1</span>
+                    <div class="fonctionnement__btn">
+                        <div class="fonctionnement__btn__numberBox">
+                            <span class="fonctionnement__btn__numberBox--number">1</span>
                         </div>
-                        <i class="btn__logo fa-solid fa-mobile-screen-button fa-lg"></i>
-                        <p class="btn__text">Choisissez un restaurant</p>
+                        <i class="fonctionnement__btn__logo fa-solid fa-mobile-screen-button fa-lg"></i>
+                        <p class="fonctionnement__btn__text">Choisissez un restaurant</p>
                     </div>
-                    <div class="btn">
-                        <div class="btn__numberBox">
-                            <span class="btn__numberBox--number">2</span>
+                    <div class="fonctionnement__btn">
+                        <div class="fonctionnement__btn__numberBox">
+                            <span class="fonctionnement__btn__numberBox--number">2</span>
                         </div>
-                        <i class="btn__logo fa-sharp fa-solid fa-list-ul fa-lg"></i>
-                        <p class="btn__text">Composez votre menu</p>
+                        <i class="fonctionnement__btn__logo fa-sharp fa-solid fa-list-ul fa-lg"></i>
+                        <p class="fonctionnement__btn__text">Composez votre menu</p>
                     </div>
-                    <div class="btn">
-                        <div class="btn__numberBox">
-                            <span class="btn__numberBox--number">3</span>
+                    <div class="fonctionnement__btn">
+                        <div class="fonctionnement__btn__numberBox">
+                            <span class="fonctionnement__btn__numberBox--number">3</span>
                         </div>
-                        <i class="btn__logo fa-sharp fa-solid fa-store fa-lg"></i>
-                        <p class="btn__text">Dégustez au restaurant</p>
+                        <i class="fonctionnement__btn__logo fa-sharp fa-solid fa-store fa-lg"></i>
+                        <p class="fonctionnement__btn__text">Dégustez au restaurant</p>
                     </div>
-                           <!-- <div class="fonctionnement__wrapper">
-                        <div class="fonctionnement__wrapper--numberBox">
-                            <span class="fonctionnement__wrapper--number">3</span>
-                        </div>
-                        <p class="fonctionnement__wrapper--text">Dégustez au restaurant</p>
-                        <div class="fonctionnement__wrapper--btn">
-                            <i class="fonctionnement__wrapper--btn-logo fa-sharp fa-solid fa-store fa-lg"></i>
-                        </div>
-                    </div> -->
                 </div>
             </div>
         </section>
         <section class="restaurants">
-            <h2 class="restaurants__title">Restaurants</h2>
-            <div class="restaurants__wrapper">
-
-
-
-                <a class="card" href="/restaurants/menu1.html">
-                    <img class="card__img" src="/assets/images/restaurants/La_palette.jpg" alt="served salmon with roquette on a dish">
-                    <div class="card__nouveau">Nouveau</div>
-                    <h3 class="card__title">La palette du goût</h3>
-                    <p class="card__subtitle">Ménilmontant</p>
-                    <i class="card__icon fa-regular fa-heart"></i>
-                </a>
-
-
-
-                <a class="card" href="/restaurants/menu2.html">
-                    <img class="card__img" >
-                    <div class="card__nouveau">Nouveau</div>
-                    <h3 class="card__title">La note enchantée</h3>
-                    <p class="card__subtitle">Charonne</p>
-                    <i class="card__icon fa-regular fa-heart"></i>
-                </a>
-                <a class="card" href="/restaurants/menu3.html">
-                    <img class="card__img" src="/assets/images/restaurants/a_la_francaise_mini.jpg" alt="served salmon with roquette on a dish">
-                    <h3 class="card__title">À la française</h3>
-                    <p class="card__subtitle">Cité Rouge</p>
-                    <i class="card__icon fa-regular fa-heart"></i>
-                </a>
-                <a class="card" href="/restaurants/menu4.html">
-                    <img class="card__img" src="/assets/images/restaurants/delice_mini.jpg" alt="served salmon with roquette on a dish">
-                    <h3 class="card__title">Le délice des sens</h3>
-                    <p class="card__subtitle">Folie-Méricourt</p>
-                    <i class="card__icon fa-regular fa-heart"></i>
-                </a>
+            <div class="restaurants__wrap">
+                <h2 class="restaurants__title">Restaurants</h2>
+                <div class="restaurants__wrapper">
+                    <a class="card" href="/restaurants/menu1.html">
+                        <img class="card__img" src="/assets/images/restaurants/La_palette.jpg" alt="assiette de saumon avec de la roquette desus">
+                        <div class="card__nouveau">Nouveau</div>
+                        <h3 class="card__title">La palette du goût</h3>
+                        <p class="card__subtitle">Ménilmontant</p>
+                        <i class="card__icon fa-regular fa-heart fa-lg"></i>
+                    </a> 
+                   <a class="card" href="/restaurants/menu2.html">
+                        <img class="card__img" src="/assets/images/restaurants/la_note_mini.jpg">
+                        <div class="card__nouveau">Nouveau</div>
+                        <h3 class="card__title">La note enchantée</h3>
+                        <p class="card__subtitle">Charonne</p>
+                        <i class="card__icon fa-regular fa-heart fa-lg"></i>
+                    </a>
+                    <a class="card" href="/restaurants/menu3.html">
+                        <img class="card__img" src="/assets/images/restaurants/a_la_francaise_mini.jpg" alt="served salmon with roquette on a dish">
+                        <h3 class="card__title">À la française</h3>
+                        <p class="card__subtitle">Cité Rouge</p>
+                        <i class="card__icon fa-regular fa-heart fa-lg"></i>
+                    </a>
+                    <a class="card" href="/restaurants/menu4.html">
+                        <img class="card__img" src="/assets/images/restaurants/delice_mini.jpg" alt="served salmon with roquette on a dish">
+                        <h3 class="card__title">Le délice des sens</h3>
+                        <p class="card__subtitle">Folie-Méricourt</p>
+                        <i class="card__icon fa-regular fa-heart fa-lg"></i>
+                    </a> 
+                </div>
             </div>
         </section>
     </main>
