footer termine page mobile termine

--- a/index.html
+++ b/index.html
@@ -85,13 +85,15 @@
         </section>
     </main>
     <footer>
-        <h4>ohmyfood</h4>
-        <ul>
-            <li class="list-group-item"><i class="fa-solid fa-utensils fa-fw" aria-hidden="true"></i>&nbsp; Proposer un restaurant</li>
-            <li class="list-group-item"><i class="fa-solid fa-handshake-angle fa-fw" aria-hidden="true"></i>&nbsp; Devenir partenaire</li>
-            <li class="list-group-item">Mentions légales</li>
-            <li class="list-group-item">Contact</li>
-        </ul>
+        <div class="footer">
+            <h4 class="footer__title">ohmyfood</h4>
+            <ul class="footer__list">
+                <li class="footer__list--item strong"><i class="fa-solid fa-utensils fa-sm fa-fw" aria-hidden="true"></i>&nbsp; Proposer un restaurant</li>
+                <li class="footer__list--item strong"><i class="fa-solid fa-handshake-angle fa-sm fa-fw" aria-hidden="true"></i>&nbsp; Devenir partenaire</li>
+                <li class="footer__list--item">Mentions légales</li>
+                <li class="footer__list--item">Contact</li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
