--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oh My Food</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer">
+    <!-- <link rel="stylesheet" href="assets/css/normalize.css"> -->
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
@@ -20,27 +25,27 @@
         <section class="reservation">
             <h2 class="reservation__title">Réservez le menu qui vous convient</h2>
             <p class="reservation__subtitle">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-            <button class="reservation__btn">Explorer nos restaurants</button>
+            <a href="#restaurants"><button class="btn reservation__btn">Explorer nos restaurants</button></a>
         </section>
         <section class="fonctionnement">
             <div class="fonctionnement__wrap">
                 <h2 class="fonctionnement__wrap--title">Fonctionnement</h2>
                 <div class="btn__box">
-                    <div class="fonctionnement__btn">
+                    <div class="btn fonctionnement__btn">
                         <div class="fonctionnement__btn__numberBox">
                             <span class="fonctionnement__btn__numberBox--number">1</span>
                         </div>
                         <i class="fonctionnement__btn__logo fa-solid fa-mobile-screen-button fa-lg"></i>
                         <p class="fonctionnement__btn__text">Choisissez un restaurant</p>
                     </div>
-                    <div class="fonctionnement__btn">
+                    <div class="btn fonctionnement__btn">
                         <div class="fonctionnement__btn__numberBox">
                             <span class="fonctionnement__btn__numberBox--number">2</span>
                         </div>
                         <i class="fonctionnement__btn__logo fa-sharp fa-solid fa-list-ul fa-lg"></i>
                         <p class="fonctionnement__btn__text">Composez votre menu</p>
                     </div>
-                    <div class="fonctionnement__btn">
+                    <div class="btn fonctionnement__btn">
                         <div class="fonctionnement__btn__numberBox">
                             <span class="fonctionnement__btn__numberBox--number">3</span>
                         </div>
@@ -50,7 +55,7 @@
                 </div>
             </div>
         </section>
-        <section class="restaurants">
+        <section class="restaurants" id="restaurants">
             <div class="restaurants__wrap">
                 <h2 class="restaurants__title">Restaurants</h2>
                 <div class="restaurants__wrapper">
