--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -11,17 +11,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 <body>
     <header class="header">
-        <div class="header__logo">
-            <a href="../index.html"><i class="fa-sharp fa-solid fa-arrow-left"></i></a>
-            <h1>ohmyfood</h1>
-        </div>
+        <h1 class="header__logo">ohmyfood</h1>
     </header>
     <main class="main-wrapper">
-
+        <div class="banner">
+            <img src="../assets/images/restaurants/La_palette.jpg" alt="">
+        </div>
+        <a href="#restaurants"><button class="btn reservation__btn">Commander</button></a>
     </main>
+    <footer>
+        <div class="footer">
+            <h4 class="footer__title">ohmyfood</h4>
+            <ul class="footer__list">
+                <li class="footer__list--item strong"><i class="fa-solid fa-utensils fa-sm fa-fw" aria-hidden="true"></i>&nbsp; Proposer un restaurant</li>
+                <li class="footer__list--item strong"><i class="fa-solid fa-handshake-angle fa-sm fa-fw" aria-hidden="true"></i>&nbsp; Devenir partenaire</li>
+                <li class="footer__list--item">Mentions légales</li>
+                <li class="footer__list--item">Contact</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 </html>
