--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
         integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
-    <!-- <link rel="stylesheet" href="assets/css/normalize.css"> -->
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
@@ -96,7 +95,7 @@
                 <li class="footer__list--item strong"><i class="fa-solid fa-utensils fa-sm fa-fw" aria-hidden="true"></i>&nbsp; Proposer un restaurant</li>
                 <li class="footer__list--item strong"><i class="fa-solid fa-handshake-angle fa-sm fa-fw" aria-hidden="true"></i>&nbsp; Devenir partenaire</li>
                 <li class="footer__list--item">Mentions légales</li>
-                <li class="footer__list--item">Contact</li>
+                <li class="footer__list--item"><a href="mailto:gieltie@outlook.fr">Contact</a></li>
             </ul>
         </div>
     </footer>
