--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -16,6 +16,9 @@
 <body>
     <header class="header">
         <h1 class="header__logo">ohmyfood</h1>
+        <div>
+            <a href="/index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        </div>
     </header>
     <main class="main-wrapper">
         <div class="banner">
@@ -30,7 +33,7 @@
                 <li class="footer__list--item strong"><i class="fa-solid fa-utensils fa-sm fa-fw" aria-hidden="true"></i>&nbsp; Proposer un restaurant</li>
                 <li class="footer__list--item strong"><i class="fa-solid fa-handshake-angle fa-sm fa-fw" aria-hidden="true"></i>&nbsp; Devenir partenaire</li>
                 <li class="footer__list--item">Mentions légales</li>
-                <li class="footer__list--item">Contact</li>
+                <li class="footer__list--item"><a href="mailto:gieltie@outlook.fr">Contact</a></li>
             </ul>
         </div>
     </footer>
