--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="reservation">
             <h2 class="reservation__title">Réservez le menu qui vous convient</h2>
             <p class="reservation__subtitle">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-            <a href="#restaurants"><button class="btn reservation__btn">Explorer nos restaurants</button></a>
+            <button class="btn reservation__btn"><a href="#restaurants">Explorer nos restaurants</a></button>
         </section>
         <section class="fonctionnement">
             <div class="fonctionnement__wrap">
@@ -59,27 +59,27 @@
                 <h2 class="restaurants__title">Restaurants</h2>
                 <div class="restaurants__wrapper">
                     <a class="card" href="/restaurants/menu1.html">
-                        <img class="card__img" src="/assets/images/restaurants/palette-mini.jpg" alt="assiette de saumon avec de la roquette desus">
+                        <img class="card__img" src="/assets/images/restaurants/palette-mini.jpg" alt="plat d'une restaurant">
                         <div class="card__nouveau">Nouveau</div>
                         <h3 class="card__title">La palette du goût</h3>
                         <p class="card__subtitle">Ménilmontant</p>
                         <i class="card__icon fa-regular fa-heart fa-lg"></i>
                     </a> 
                    <a class="card" href="/restaurants/menu2.html">
-                        <img class="card__img" src="/assets/images/restaurants/note-mini.jpg">
+                        <img class="card__img" src="/assets/images/restaurants/note-mini.jpg" alt="plat d'une restaurant">
                         <div class="card__nouveau">Nouveau</div>
                         <h3 class="card__title">La note enchantée</h3>
                         <p class="card__subtitle">Charonne</p>
                         <i class="card__icon fa-regular fa-heart fa-lg"></i>
                     </a>
                     <a class="card" href="/restaurants/menu3.html">
-                        <img class="card__img" src="/assets/images/restaurants/francaise-mini.jpg" alt="served salmon with roquette on a dish">
+                        <img class="card__img" src="/assets/images/restaurants/francaise-mini.jpg" alt="plat d'une restaurant">
                         <h3 class="card__title">À la française</h3>
                         <p class="card__subtitle">Cité Rouge</p>
                         <i class="card__icon fa-regular fa-heart fa-lg"></i>
                     </a>
                     <a class="card" href="/restaurants/menu4.html">
-                        <img class="card__img" src="/assets/images/restaurants/delice-mini.jpg" alt="served salmon with roquette on a dish">
+                        <img class="card__img" src="/assets/images/restaurants/delice-mini.jpg" alt="plat d'une restaurant">
                         <h3 class="card__title">Le délice des sens</h3>
                         <p class="card__subtitle">Folie-Méricourt</p>
                         <i class="card__icon fa-regular fa-heart fa-lg"></i>
