fixed btn issue

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <section class="reservation">
             <h2 class="reservation__title">Réservez le menu qui vous convient</h2>
             <p class="reservation__subtitle">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-            <button class="btn reservation__btn"><a href="#restaurants">Explorer nos restaurants</a></button>
+            <a class="btn reservation__btn" href="#restaurants">Explorer nos restaurants</a>
         </section>
         <section class="fonctionnement">
             <div class="fonctionnement__wrap">
