netoyage du code generale pret pour etape 3

--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -22,9 +22,9 @@
     </header>
     <main class="main-wrapper">
         <div class="banner">
-            <img src="../assets/images/restaurants/La_palette.jpg" alt="">
+            <img src="../assets/images/restaurants/palette.jpg" alt="">
         </div>
-        <a href="#restaurants"><button class="btn reservation__btn">Commander</button></a>
+        <a class="btn reservation__btn" href="#restaurants">Commander</a>
     </main>
     <footer>
         <div class="footer">
