--- a/index.html
+++ b/index.html
@@ -21,30 +21,30 @@
         </div>
     </header>
     <main class="main-wrapper">
-        <section class="reservation">
-            <h2 class="reservation__title">Réservez le menu qui vous convient</h2>
-            <p class="reservation__subtitle">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-            <a class="btn reservation__btn" href="#restaurants">Explorer nos restaurants</a>
+        <section class="reservez">
+            <h2 class="reservez__title">Réservez le menu qui vous convient</h2>
+            <p class="reservez__subtitle">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
+            <a class="reservez__btn btn" href="#restaurants">Explorer nos restaurants</a>
         </section>
         <section class="fonctionnement">
             <div class="fonctionnement__wrap">
                 <h2 class="fonctionnement__wrap--title">Fonctionnement</h2>
-                <div class="btn__box">
-                    <div class="btn fonctionnement__btn">
+                <div class="fonctionnement__wrap--box">
+                    <div class="fonctionnement__btn btn">
                         <div class="fonctionnement__btn__numberBox">
                             <span class="fonctionnement__btn__numberBox--number">1</span>
                         </div>
                         <i class="fonctionnement__btn__logo fa-solid fa-mobile-screen-button fa-lg"></i>
                         <p class="fonctionnement__btn__text">Choisissez un restaurant</p>
                     </div>
-                    <div class="btn fonctionnement__btn">
+                    <div class="fonctionnement__btn btn">
                         <div class="fonctionnement__btn__numberBox">
                             <span class="fonctionnement__btn__numberBox--number">2</span>
                         </div>
                         <i class="fonctionnement__btn__logo fa-sharp fa-solid fa-list-ul fa-lg"></i>
                         <p class="fonctionnement__btn__text">Composez votre menu</p>
                     </div>
-                    <div class="btn fonctionnement__btn">
+                    <div class="fonctionnement__btn btn">
                         <div class="fonctionnement__btn__numberBox">
                             <span class="fonctionnement__btn__numberBox--number">3</span>
                         </div>
@@ -58,28 +58,28 @@
             <div class="restaurants__wrap">
                 <h2 class="restaurants__title">Restaurants</h2>
                 <div class="restaurants__wrapper">
-                    <a class="card" href="/restaurants/menu1.html">
-                        <img class="card__img" src="/assets/images/restaurants/palette-mini.jpg" alt="plat d'une restaurant">
-                        <div class="card__nouveau">Nouveau</div>
+                    <a class="card" href="./restaurants/menu1.html">
+                        <img class="card__img" src="./assets/images/restaurants/palette-mini.jpg" alt="plat d'une restaurant">
+                        <span class="card__nouveau">Nouveau</span>
                         <h3 class="card__title">La palette du goût</h3>
                         <p class="card__subtitle">Ménilmontant</p>
                         <i class="card__icon fa-regular fa-heart fa-lg"></i>
                     </a> 
-                   <a class="card" href="/restaurants/menu2.html">
-                        <img class="card__img" src="/assets/images/restaurants/note-mini.jpg" alt="plat d'une restaurant">
-                        <div class="card__nouveau">Nouveau</div>
+                   <a class="card" href="./restaurants/menu2.html">
+                        <img class="card__img" src="./assets/images/restaurants/note-mini.jpg" alt="plat d'une restaurant">
+                        <span class="card__nouveau">Nouveau</span>
                         <h3 class="card__title">La note enchantée</h3>
                         <p class="card__subtitle">Charonne</p>
                         <i class="card__icon fa-regular fa-heart fa-lg"></i>
                     </a>
-                    <a class="card" href="/restaurants/menu3.html">
-                        <img class="card__img" src="/assets/images/restaurants/francaise-mini.jpg" alt="plat d'une restaurant">
+                    <a class="card" href="./restaurants/menu3.html">
+                        <img class="card__img" src="./assets/images/restaurants/francaise-mini.jpg" alt="plat d'une restaurant">
                         <h3 class="card__title">À la française</h3>
                         <p class="card__subtitle">Cité Rouge</p>
                         <i class="card__icon fa-regular fa-heart fa-lg"></i>
                     </a>
-                    <a class="card" href="/restaurants/menu4.html">
-                        <img class="card__img" src="/assets/images/restaurants/delice-mini.jpg" alt="plat d'une restaurant">
+                    <a class="card" href="./restaurants/menu4.html">
+                        <img class="card__img" src="./assets/images/restaurants/delice-mini.jpg" alt="plat d'une restaurant">
                         <h3 class="card__title">Le délice des sens</h3>
                         <p class="card__subtitle">Folie-Méricourt</p>
                         <i class="card__icon fa-regular fa-heart fa-lg"></i>
