animations sur les boutons et les carte

--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -24,7 +24,7 @@
         <div class="banner">
             <img src="../assets/images/restaurants/palette.jpg" alt="">
         </div>
-        <a class="btn reservation__btn" href="#restaurants">Commander</a>
+        <a class="reservez__btn btn" href="#restaurants">Commander</a>
     </main>
     <footer>
         <div class="footer">
