fix lien retour menu

--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -17,7 +17,7 @@
     <header class="header">
         <h1 class="header__logo">ohmyfood</h1>
         <div>
-            <a href="/index.html"><i class="fa-solid fa-arrow-left"></i></a>
+            <a href="../index.html"><i class="fa-solid fa-arrow-left"></i></a>
         </div>
     </header>
     <main class="main-wrapper">
