media queries pour header et reservation et fonctionement

--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -21,7 +21,7 @@
         </div>
     </header>
     <main class="main-wrapper">
-        <div class="banner">
+        <div>
             <img src="../assets/images/restaurants/palette.jpg" alt="">
         </div>
         <a class="reservez__btn btn" href="#restaurants">Commander</a>
