--- a/restaurants/menu1.html
+++ b/restaurants/menu1.html
@@ -49,7 +49,13 @@
         <!--***** Le Menu *****-->
 
         <section class="menu">
-
+            <h1>La palette du goût</h1>
+            <div>
+                
+            </div>
+            <div></div>
+            <div></div>
+            <a href=""></a>
         </section>
     </main>
     <!--***** Le Footer *****-->
